--- a/SerializedDataSetViewer/SerializedDataSetViewer.csproj
+++ b/SerializedDataSetViewer/SerializedDataSetViewer.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>Table_748.ico</ApplicationIcon>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
